# BinaryMeshFormat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  dependencies.cmake
cmake/: get_cpm.cmake
include/zjucad/bmf/: bmf.hpp
src/: bmf.cpp
src/cli/: main.cpp
tests/: CMakeLists.txt  test.cpp  test_bmf.cpp
